[code-server] Add enflame variation; fix some problems

--- a/user-console/code-server/variations/enflame/Chart.yaml
+++ b/user-console/code-server/variations/enflame/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: code-server
+name: code-server-enflame
 description: Code Server 是一个基于浏览器的 VSCode 环境。
 type: application
 version: 0.3.2
