--- a/user-console/vllm/configs/v0_3_0.yaml
+++ b/user-console/vllm/configs/v0_3_0.yaml
@@ -1,3 +1,19 @@
+## @param server.image.registry Repository registry for the server image
+## @param server.image.repository Repository name for the server image
+## @param server.image.tag Image tag for the server image (immutable tags are recommended)
+## @param server.image.pullPolicy Image pull policy for the server image
+## @param server.resources.limits.cpu CPU limit for Kubernetes resources
+## @param server.resources.limits.memory Memory limit for Kubernetes resources
+## @param server.resources.limits."nvidia.com/gpu" NVIDIA GPU limit for vLLM container
+## @param server.model.deployName Name by which the model is deployed
+## @param server.model.volume.storageClass Storage class for the model volume
+## @param server.model.volume.size Size of the model volume
+## @param server.model.volume.accessModes Access modes for the model volume
+## @param server.model.volume.existingClaim PVC for the model volume, if bringing your own PVC
+## @param server.model.volume.subPath Subdirectory of the model volume to mount
+## @param server.autoScaling.minReplicas Minimum number of replicas for autoscaling
+## @param server.autoScaling.maxReplicas Maximum number of replicas for autoscaling
+## @param server.autoScaling.annotations Annotations for Knative Service autoscaling
 ## @param server.app.extraArgs Extra arguments for vLLM engine
 ## @param server.env Extra environment variables to add to vLLM server container
 ## @param server.extraVolumeMounts Extra volumeMounts to add to vLLM server container
@@ -6,36 +22,18 @@
 ## @param server.nodeSelector Node labels for vLLM server Pod assignment
 ##
 server:
-
-  ## @param image.registry vLLM image registry
-  ## @param image.repository vLLM image repository
-  ## @param image.tag vLLM image tag
-  ## @param image.pullPolicy vLLM image pull policy
-  ##
   image:
     registry: "$(T9K_APP_IMAGE_REGISTRY)"
     repository: "$(T9K_APP_IMAGE_NAMESPACE)/vllm-openai"
-    # Overrides the image tag whose default is the chart appVersion.
     tag: "v0.6.3"
     pullPolicy: IfNotPresent
 
-  ## @param resources.limits.cpu CPU limit for vLLM container
-  ## @param resources.limits.memory Memory limit for vLLM container
-  ## @param resources.limits."nvidia.com/gpu" NVIDIA GPU limit for vLLM container
-  ##
   resources:
     limits:
       cpu: 4
       memory: 64Gi
       nvidia.com/gpu: 1
 
-  ## @param server.model.deployName Name by which the model is deployed
-  ## @param server.model.volume.size Size of the PVC
-  ## @param server.model.volume.storageClass Storage class for the PVC
-  ## @param server.model.volume.accessModes Access modes for the PVC
-  ## @param server.model.volume.existingClaim Name of an existing PVC to use
-  ## @param server.model.volume.subPath Subdirectory of the PVC to mount as model files
-  ##
   model:
     # 模型以该名称被部署
     deployName: ""
@@ -48,10 +46,6 @@ server:
       existingClaim: ""
       subPath: ""
 
-  ## @param server.autoScaling.minReplicas Minimum number of replicas for autoscaling
-  ## @param server.autoScaling.maxReplicas Maximum number of replicas for autoscaling
-  ## @param server.autoScaling.annotations Annotations for Knative Service autoscaling
-  ##
   autoScaling:
     minReplicas: 1
     maxReplicas: 1
@@ -82,16 +76,19 @@ server:
   nodeSelector: {}
 
 ## @param datacube.source Source of the model files (`huggingface`, `git`, `s3`, or "")
+## @param datacube.huggingface.id Hugging Face ID of the model
+## @param datacube.huggingface.files Files to download from the Hugging Face model repository
+## @param datacube.huggingface.existingSecret Secret whose value of key `token` is used as the Hugging Face token
+## @param datacube.git.url Git repository URL for the model
+## @param datacube.git.ref Git branch, tag, or commit for the model
+## @param datacube.git.existingSecret Secret whose value of key `token` is used as the Git token
+## @param datacube.s3.url S3 URL for the model
+## @param datacube.s3.existingSecret Secret of type s3-env containing the S3 credentials
 ## @param datacube.env Extra environment variables to add to datacube container
 ##
 datacube:
   # 模型文件来源，应为 ""、"huggingface"、"git" 或 "s3"，"" 表示模型文件已存在，不使用 DataCube 下载
   source: ""
-
-  ## @param datacube.huggingface.id Hugging Face ID of the model
-  ## @param datacube.huggingface.files Files to download from the Hugging Face model repository
-  ## @param datacube.huggingface.existingSecret Secret whose value of key `token` is used as the Hugging Face token
-  ##
   huggingface:
     # 模型的 Hugging Face ID，例如 "meta-llama/Meta-Llama-3-8B"
     id: ""
@@ -99,11 +96,6 @@ datacube:
     files: ""
     # 引用 Secret 的键 token 的值作为 Hugging Face token
     existingSecret: ""
-
-  ## @param datacube.git.url Git repository URL for the model
-  ## @param datacube.git.ref Git branch, tag, or commit for the model
-  ## @param datacube.git.existingSecret Secret whose value of key `token` is used as the Git token
-  ##
   git:
     # Git 仓库路径
     url: ""
@@ -111,16 +103,11 @@ datacube:
     ref: ""
     # 引用 Secret 的键 token 的值作为 Git token
     existingSecret: ""
-  
-  ## @param datacube.s3.url S3 URL for the model
-  ## @param datacube.s3.existingSecret Secret of type s3-env containing the S3 credentials
-  ##
   s3:
     # S3 路径
     url: ""
     # 引用 s3-env 类型的 Secret 的键值
     existingSecret: ""
-
   env: []
     # - name: http_proxy
     #   value: ""
@@ -129,6 +116,10 @@ datacube:
     # - name: HF_ENDPOINT
     #   value: ""
 
+## @param initializer.image.registry Repository registry for the initializer image
+## @param initializer.image.repository Repository name for the initializer image
+## @param initializer.image.tag Image tag for the initializer image (immutable tags are recommended)
+## @param initializer.image.pullPolicy Image pull policy for the initializer image
 initializer:
   # 初始化器镜像，请勿修改
   image:
