--- a/user-console/vllm/variations/metax/template.yaml
+++ b/user-console/vllm/variations/metax/template.yaml
@@ -23,4 +23,11 @@ template:
           name: "{{ .Release.Name }}"
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Ready\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
-      dependencies: {}
+      dependencies:
+        crds:
+        - group: tensorstack.dev
+          version: v1beta1
+          resource: mlservices
+        - group: tensorstack.dev
+          version: v1beta1
+          resource: datacubes
