--- a/user-console/dify/chart/Chart.yaml
+++ b/user-console/dify/chart/Chart.yaml
@@ -7,15 +7,15 @@ appVersion: 0.11.2
 dependencies:
 - condition: redis.embedded
   name: redis
-  repository: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
+  repository: oci://registry-1.docker.io/bitnamicharts
   version: ~19.1.1
 - condition: postgresql.embedded
   name: postgresql
-  repository: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
+  repository: oci://registry-1.docker.io/bitnamicharts
   version: ~15.2.5
 - condition: minio.embedded
   name: minio
-  repository: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
+  repository: oci://registry-1.docker.io/bitnamicharts
   version: ~14.1.7
 - condition: qdrant.embedded
   name: qdrant
