--- a/user-console/one-api/chart/Chart.yaml
+++ b/user-console/one-api/chart/Chart.yaml
@@ -2,8 +2,8 @@ apiVersion: v2
 name: one-api
 description: A Helm chart for Kubernetes
 type: application
-version: 0.1.0
-appVersion: v0.6.10-alpha.1
+version: 0.1.1
+appVersion: v0.6.10
 dependencies:
 - name: mysql
   repository: oci://registry-1.docker.io/bitnamicharts
