--- a/user-console/llama-board/docker/Dockerfile
+++ b/user-console/llama-board/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM pytorch/pytorch:2.4.0-cuda12.1-cudnn9-devel
+FROM pytorch/pytorch:2.5.1-cuda12.4-cudnn9-devel
 
 RUN apt-get update && \
   apt-get install -yq --no-install-recommends openssh-server pdsh git libaio-dev && \
@@ -8,11 +8,13 @@ RUN apt-get update && \
 RUN git clone --depth 1 https://github.com/hiyouga/LLaMA-Factory.git && \
   cd LLaMA-Factory && \
   pip install --no-cache-dir --upgrade pip && \
-  pip install ".[torch,metrics,deepspeed,bitsandbytes,hqq,gptq,awq,aqlm,vllm,galore,badam,qwen,modelscope,dev]" && \
+  pip install -r requirements.txt && \
+  pip install ".[metrics,deepspeed,liger-kernel,bitsandbytes,hqq,gptq,awq,aqlm,vllm,galore,apollo,badam,adam-mini,qwen,minicpm_v,modelscope,swanlab]" && \
   cd .. && \
   rm -rf LLaMA-Factory && \
-  git clone --depth 1 https://github.com/NetEase-FuXi/EETQ.git && \
+  git clone https://github.com/NetEase-FuXi/EETQ.git && \
   cd EETQ && \
+  git reset --hard a6c5110 && \
   git submodule update --init --recursive && \
   pip install . && \
   cd .. && \
