[open-webui] Add resources for initContainer

--- a/user-console/open-webui/chart/values.yaml
+++ b/user-console/open-webui/chart/values.yaml
@@ -167,7 +167,10 @@ startupProbe: {}
 resources: {}
 
 copyAppData:
-  resources: {}
+  resources:
+    limits:
+      cpu: 1
+      memory: 2Gi
 
 managedCertificate:
   enabled: false
