--- a/user-console/vllm/variations/enflame/template.yaml
+++ b/user-console/vllm/variations/enflame/template.yaml
@@ -8,12 +8,12 @@ metadata:
   icon: "file://$APP_DIR/icon.png"
 template:
   helm:
-    repo: "oci://registry.qingyang.t9kcloud.cn/t9kcharts"
+    repo: "oci://registry.qy.t9kcloud.cn/t9kcharts"
     # repo: "https://t9k.github.io/apps/"
     chart: "vllm-enflame"
     versions:
-    - version: 0.3.0
-      config: "file://$APP_DIR/configs/v0_3_0.yaml"
+    - version: 0.3.3
+      config: "file://$APP_DIR/configs/v0_3_3.yaml"
       urls: []
       readinessProbe:
         resources:
