Update app anthingllm

--- a/user-console/anythingllm/chart/templates/deployment.yaml
+++ b/user-console/anythingllm/chart/templates/deployment.yaml
@@ -36,14 +36,16 @@ spec:
               path: /
               port: http
             initialDelaySeconds: 60
-            periodSeconds: 15
+            periodSeconds: 30
+            timeoutSeconds: 15
             failureThreshold: 5
           readinessProbe:
             httpGet:
               path: /
               port: http
             initialDelaySeconds: 60
-            periodSeconds: 15
+            periodSeconds: 30
+            timeoutSeconds: 15
             failureThreshold: 5
           env:
             - name: STORAGE_DIR
