--- a/user-console/comfyui/chart/values.yaml
+++ b/user-console/comfyui/chart/values.yaml
@@ -1,7 +1,7 @@
 image:
   registry: docker.io
   repository: t9kpublic/comfyui
-  tag: "20240709"
+  tag: ""
   pullPolicy: IfNotPresent
 
 service:
