--- a/user-console/comfyui/template.yaml
+++ b/user-console/comfyui/template.yaml
@@ -26,3 +26,17 @@ template:
           currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
           desiredStatus: "True"
       dependencies: {}
+    - version: 1.0.1
+      config: "file://$APP_DIR/configs/v1_0_1.yaml"
+      urls: 
+      - name: UI
+        url: /apps/{{ .Release.Namespace }}/comfyui/{{ .Release.Name }}/
+      readinessProbe:
+        resources:
+        - group: apps
+          version: v1
+          resource: deployments
+          name: "{{ .Release.Name }}"
+          currentStatus: "{{- range .status.conditions }}{{- if eq .type \"Available\" }}{{- .status }}{{- end }}{{- end }}"
+          desiredStatus: "True"
+      dependencies: {}
