--- a/user-console/dify/chart/Chart.yaml
+++ b/user-console/dify/chart/Chart.yaml
@@ -1,26 +1,22 @@
 apiVersion: v2
-name: dify
-description: A Helm chart for Dify
-type: application
-version: 0.3.9
-appVersion: 0.15.0
+appVersion: 1.1.3
 dependencies:
 - condition: redis.embedded
   name: redis
-  repository: oci://registry-1.docker.io/bitnamicharts
+  repository: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
   version: ~19.1.1
 - condition: postgresql.embedded
   name: postgresql
-  repository: oci://registry-1.docker.io/bitnamicharts
+  repository: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
   version: ~15.2.5
 - condition: minio.embedded
   name: minio
-  repository: oci://registry-1.docker.io/bitnamicharts
+  repository: https://raw.githubusercontent.com/bitnami/charts/archive-full-index/bitnami
   version: ~14.1.7
-- condition: qdrant.embedded
-  name: qdrant
-  version: ~1.12.4
-  repository: https://qdrant.github.io/qdrant-helm
+description: A Helm chart for Dify
+home: https://github.com/langgenius/dify
 maintainers:
 - name: douban
-home: https://github.com/langgenius/dify
+name: dify
+type: application
+version: 0.6.1
