--- a/user-console/dify/chart/values.yaml
+++ b/user-console/dify/chart/values.yaml
@@ -2,6 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+
 # volume and volumeMounts would be injected to api and worker
 volumes: []
 
@@ -11,8 +12,8 @@ nameOverride: ""
 fullnameOverride: ""
 
 global:
-  host: ""
-  # # Change this is your ingress is exposed with port other than 443, 80, like 8080 for instance
+  host: "http://127.0.0.1"
+  # Change this is your ingress is exposed with port other than 443, 80, like 8080 for instance
   port: ""
   enableTLS: false
   image:
@@ -23,11 +24,13 @@ global:
   # * frontend
   # * api
   # * worker
+  # * plugin_daemon
   extraEnvs: []
 
   # the following extra configs would be injected into:
   # * api
   # * worker
+  # * plugin_daemon
   extraBackendEnvs:
   # SECRET_KEY is a must, check https://docs.dify.ai/getting-started/install-self-hosted/environments#secret_key for detail
   # read more on the readme page for secret ref
@@ -39,7 +42,6 @@ global:
   #     secretKeyRef:
   #       name: dify
   #       key: SECRET_KEY
-
   # Provide extra labels for all deployments and related pods of this chart
   labels: {}
 
@@ -61,6 +63,10 @@ frontend:
     tag: ""
 
   envs:
+    - name: MARKETPLACE_API_URL
+      value: 'https://marketplace.dify.ai'
+    - name: MARKETPLACE_URL
+      value: 'https://marketplace.dify.ai'
     - name: HOSTNAME
       value: "0.0.0.0"
   imagePullSecrets: []
@@ -84,14 +90,15 @@ frontend:
 
   containerPort: 3000
 
+
   resources:
     # We usually recommend not to specify default resources and to leave this as a conscious
     # choice for the user. This also increases chances charts run on environments with little
     # resources, such as Minikube. If you do want to specify resources, uncomment the following
     # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
     limits:
-      cpu: 1
-      memory: 2Gi
+      cpu: 250m
+      memory: 1Gi
 
   autoscaling:
     enabled: false
@@ -129,6 +136,7 @@ frontend:
     periodSeconds: 30
     successThreshold: 1
     failureThreshold: 2
+
 
 api:
   replicaCount: 1
@@ -181,7 +189,7 @@ api:
     # resources, such as Minikube. If you do want to specify resources, uncomment the following
     # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
     limits:
-      cpu: 1
+      cpu: 250m
       memory: 2Gi
 
   autoscaling:
@@ -246,7 +254,7 @@ worker:
     # resources, such as Minikube. If you do want to specify resources, uncomment the following
     # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
     limits:
-      cpu: 1
+      cpu: 250m
       memory: 2Gi
 
   autoscaling:
@@ -276,7 +284,7 @@ sandbox:
     repository: langgenius/dify-sandbox
     pullPolicy: IfNotPresent
     # Overrides the image tag whose default is the chart appVersion.
-    tag: "0.2.0"
+    tag: "0.2.10"
   config:
     # python_requirements: |
     #   numpy==1.20.3
@@ -348,6 +356,62 @@ sandbox:
     successThreshold: 1
     failureThreshold: 2
 
+# 新增plugin_daemon服务
+pluginDaemon:
+  enabled: true
+  replicaCount: 1
+  # please change to avoid abuse
+  serverKey: "lYkiYYT6owG+71oLerGzA7GXCgOT++6ovaezWAjpCjf+Sjc3ZtU+qUEi"
+  # prefer to use secret
+  serverKeySecret: ""
+  # please change to avoid abuse
+  difyInnerApiKey: "QaHbTe77CtuXmsfyhR7+vRjI/+XbV1AaFy691iy+kGDv2Jvy0/eAh8Y1"
+  # prefer to use secret
+  difyInnerApiKeySecret: ""
+  image:
+    repository: langgenius/dify-plugin-daemon
+    pullPolicy: IfNotPresent
+    tag: "0.0.5-local"
+
+  envs:
+  - name: SERVER_PORT
+    value: "5002"
+  - name: MAX_PLUGIN_PACKAGE_SIZE
+    value: "52428800"
+  - name: PPROF_ENABLED
+    value: "false"
+  - name: FORCE_VERIFYING_SIGNATURE
+    value: "true"
+  - name: DB_DATABASE
+    value: "dify_plugin"
+  - name: PLUGIN_REMOTE_INSTALLING_HOST
+    value: "0.0.0.0"
+  - name: PLUGIN_REMOTE_INSTALLING_PORT
+    value: "5003"
+
+  service:
+    type: ClusterIP
+    port: 5002
+
+  containerPort: 5002
+
+  resources:
+    limits:
+      cpu: 250m
+      memory: 2Gi
+
+  nodeSelector: {}
+
+  tolerations: []
+
+  affinity: {}
+
+  persistence:
+    enabled: true
+    # 使用默认的 storageClass，如果需要指定其他 storageClass，取消下面的注释并修改值
+    # storageClass: "rook-ceph-block"
+    accessMode: ReadWriteOnce
+    size: 20Gi
 ##### dependencies #####
 
 redis:
@@ -368,6 +432,8 @@ redis:
     persistence:
       enabled: false
       size: 8Gi
+  networkPolicy:
+    enabled: false
 
 postgresql:
   # using embedded postgresql
@@ -384,6 +450,8 @@ postgresql:
   primary:
     persistence:
       enabled: false
+    networkPolicy:
+      enabled: false
 
 minio:
   embedded: true
@@ -397,15 +465,5 @@ minio:
   defaultBuckets: "dify"
   persistence:
     enabled: false
-
-qdrant:
-  embedded: true
-  # using embedded qdrant
-  # connection info would be set automatically
-  # best to use external vector db if you have one
-  # setting embedded to false and set vector db config in envrionment variable
-  image:
-    repository: docker.io/qdrant/qdrant
-    pullPolicy: IfNotPresent
-    tag: ""
-  apiKey: dify
+  networkPolicy:
+    enabled: false
